@@ -1,9 +1,14 @@
 #include "placecontainer.h"
 
-PlaceContainer::PlaceContainer(){
-	clear();
+
+PlaceContainer::PlaceContainer()
+{
+    clear();
 }
 
-PlaceContainer::PlaceContainer( QString name ) : m_name(name)  {
-	clear();
+
+PlaceContainer::PlaceContainer( QString name )
+    : m_name(name)
+{
+    clear();
 }
